npm start command added

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple API about the characters of the T.V. show The Wire made with Express.js",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
