--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "parcel": "parcel ./views/index.pug"
   },
   "repository": {
     "type": "git",
@@ -26,10 +27,13 @@
   },
   "homepage": "https://github.com/tomas95go/the-wire-characters#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "@parcel/transformer-pug": "^2.6.0",
+    "nodemon": "^2.0.16",
+    "parcel": "^2.6.0"
   }
 }
