--- a/package.json
+++ b/package.json
@@ -27,13 +27,9 @@
   },
   "homepage": "https://github.com/tomas95go/the-wire-characters#readme",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "pug": "^3.0.2"
+    "express": "^4.18.1"
   },
   "devDependencies": {
-    "@parcel/transformer-pug": "^2.6.0",
-    "nodemon": "^2.0.16",
-    "parcel": "^2.6.0"
+    "nodemon": "^2.0.16"
   }
 }
